--- a/style.css
+++ b/style.css
@@ -5,3 +5,26 @@
 .font-italianno {
   font-family: "Italianno", cursive;
 }
+
+@keyframes typing {
+    0%, 80%, 100% {
+      transform: scale(0.8);
+      opacity: 0.5;
+    }
+    40% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+
+  .typing-dot {
+    animation: typing 1.4s infinite ease-in-out;
+  }
+
+  .typing-dot.delay-1 {
+    animation-delay: -0.32s;
+  }
+
+  .typing-dot.delay-2 {
+    animation-delay: -0.16s;
+  }
